--- a/To_Do_List_App/index.css
+++ b/To_Do_List_App/index.css
@@ -17,7 +17,7 @@ body {
 .title {
     font-size: 30px;
     font-weight: 600;
-    color: #cf9516;
+    color: grey;
     letter-spacing: 1px;
     margin: 30px 0;
 }
@@ -47,9 +47,48 @@ body {
 .add-list {
     border: none;
     border-radius: 5px;
-    background-color: #cf9516;
+    background-color: gray;
     outline: none;
     font-size: 15px;
     color: #fff;
+    cursor: pointer;
+}
+
+.tasks {
+    width: 100%;
+    margin-top: 30px;
+}
+
+.item {
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.item.completed p {
+    text-decoration: line-through;
+    color: rgb(174, 174, 174);
+}
+
+.item p {
+    font-size: 15px;
+    font-weight: 500;
+    color: #111;
+    letter-spacing: 1px;
+}
+
+.item-btn {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.item-btn i {
+    color: rgb(8, 6, 133);
+    font-size: 18px;
     cursor: pointer;
 }
