--- a/To_Do_List_App/index.css
+++ b/To_Do_List_App/index.css
@@ -17,7 +17,7 @@ body {
 .title {
     font-size: 30px;
     font-weight: 600;
-    color: grey;
+    color: rgb(229, 12, 211);
     letter-spacing: 1px;
     margin: 30px 0;
 }
@@ -52,6 +52,13 @@ body {
     font-size: 15px;
     color: #fff;
     cursor: pointer;
+    opacity: .6;
+    pointer-events: none;
+}
+
+.add-list.active {
+    opacity: 1;
+    pointer-events: all;
 }
 
 .tasks {
